# ThreadedImageProcessor

./: BMPHandler.h  BMPHeader.c  CMakeLists.txt  Image.c  Image.h  Main.c  McCandlessFilters.c  README.md
headers/: BMPHandler.h  Image.h  filters.h  macros.h
src/: BMPHandler.c  BMPHeader.c  Image.c
